# gdg

./: .gitignore  README.md  gui.py  pyproject.toml
telnet/: gdg_tn.py
