[project]
name = "gdg"
version = "0.1.0"
# Require Python 3.12.x because this project depends on stdlib `telnetlib`.
# `telnetlib` compatibility is tested on Python 3.12; newer interpreters
# may remove or change it, so we restrict the supported range to 3.12.x.
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySimpleGUI>=6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
